--- a/lab-02-plastic-waste.Rmd
+++ b/lab-02-plastic-waste.Rmd
@@ -179,28 +179,79 @@ Color and fill are both assigned to specific category, whereas alpha is not. Alp
 
 And yet another way to visualize this relationship is using side-by-side box plots.
 
-```{r plastic_waste_per_cap-box}
+```{r plastic_waste_per_cap-box, eval=TRUE}
 ggplot(data = plastic_waste, 
        mapping = aes(x = continent, 
                      y = plastic_waste_per_cap)) +
   geom_boxplot()
 ```
 
-1.  Convert your side-by-side box plots from the previous task to [violin plots](http://ggplot2.tidyverse.org/reference/geom_violin.html). What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
+4.  Convert your side-by-side box plots from the previous task to [violin plots](http://ggplot2.tidyverse.org/reference/geom_violin.html). What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
 
 ```{marginfigure}
 **Remember:** We use `geom_point()` to make scatterplots.
 ```
 
-1.  Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita using a scatterplot.
+```{r plastic_waste_per_cap-violin, eval=TRUE}
+ggplot(data = plastic_waste, 
+       mapping = aes(x = continent, 
+                     y = plastic_waste_per_cap)) +
+  geom_violin()
+```
+
+the Violin plot shows specific points where many countries have the same plastic waste per capita, but doesn't display averages as well. The box plot doesn't show specific points where many countries land at the same spot, but it effectively displays the averages for each continent.
+
+5.  Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita using a scatterplot.
     Describe the relationship.
 
-2.  Colour the points in the scatterplot by continent.
+```{r scatterplot, eval=TRUE}
+  ggplot(data = plastic_waste, 
+       mapping = aes(x = plastic_waste_per_cap, 
+                     y = mismanaged_plastic_waste_per_cap)) +
+  geom_point() +
+  xlim(0, 0.75)
+```
+
+There is a correlation between them. The two are connected so that, in general, the higher one is the higher the other is. However, there is a lot of variance in this observation.
+
+6.  Colour the points in the scatterplot by continent.
     Does there seem to be any clear distinctions between continents with respect to how plastic waste per capita and mismanaged plastic waste per capita are associated?
 
-3.  Visualize the relationship between plastic waste per capita and total population as well as plastic waste per capita and coastal population.
+```{r colored scatterplot, eval=TRUE}
+  ggplot(data = plastic_waste, 
+       mapping = aes(x = plastic_waste_per_cap, 
+                     y = mismanaged_plastic_waste_per_cap,
+                     color = continent)) +
+  geom_point() +
+  xlim(0, 0.75)
+```
+
+In Africa and Oceana the correlation is quite clear. It is still present in Asian countries, but there are more exceptions. North America shows some correlation, but it is not very consistent. Europe, however, shows very little correlation at all.
+
+7.  Visualize the relationship between plastic waste per capita and total population as well as plastic waste per capita and coastal population.
     You will need to make two separate plots.
     Do either of these pairs of variables appear to be more strongly linearly associated?
+    
+```{r total population, eval=TRUE}
+  ggplot(data = plastic_waste, 
+       mapping = aes(x = plastic_waste_per_cap, 
+                     y = total_pop)) +
+  geom_point() +
+      xlim(0, 0.75) +
+      ylim(0, 3.5e+08)
+```
+    
+
+```{r coastal population, eval=TRUE}
+  ggplot(data = plastic_waste, 
+       mapping = aes(x = plastic_waste_per_cap, 
+                     y = coastal_pop)) +
+  geom_point() +
+      xlim(0, 0.75) +
+      ylim(0, 3.5e+08)
+```
+
+The association between the two is not very strong, but it is more notable in total population than in coastal population.
 
 🧶 ✅ ⬆️ *Now is another good time to knit your document and commit and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
